# vcad

./: .gitignore  CHANGELOG.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  changelog.schema.json  mascot.glb  package-lock.json  package.json  vercel.json
.claude/: settings.json
.claude/hooks/: changelog-prompt.sh
.github/workflows/: ci.yml
crates/vcad/: Cargo.toml
crates/vcad-cli/: Cargo.toml
crates/vcad-cli/src/: main.rs
crates/vcad-ir/: Cargo.toml
crates/vcad-ir/src/: compact.rs  lib.rs
crates/vcad-kernel/: Cargo.toml
crates/vcad-kernel-booleans/: Cargo.toml
crates/vcad-kernel-booleans/src/: api.rs  bbox.rs  classify.rs  lib.rs  pipeline.rs  repair.rs  sew.rs  split.rs  ssi.rs  trim.rs
crates/vcad-kernel-booleans/src/mesh/: mod.rs
crates/vcad-kernel-cam/src/: lib.rs  operation.rs  tool.rs
crates/vcad-kernel-cam/src/adaptive/: engagement.rs  mod.rs  trochoidal.rs
crates/vcad-kernel-cam/src/dropcutter/: ball.rs  bull.rs  flat.rs  mesh_accel.rs  mod.rs
crates/vcad-kernel-cam/src/operation/: roughing3d.rs
crates/vcad-kernel-cam/src/post/: linuxcnc.rs  mod.rs
crates/vcad-kernel-drafting/examples/: section_test.rs
crates/vcad-kernel-drafting/src/: lib.rs  section.rs  types.rs
crates/vcad-kernel-fillet/: Cargo.toml
crates/vcad-kernel-fillet/src/: lib.rs
crates/vcad-kernel-geom/src/: lib.rs
crates/vcad-kernel-gpu/: Cargo.toml
crates/vcad-kernel-gpu/src/: context.rs  decimate.rs  lib.rs  normals.rs
crates/vcad-kernel-gpu/src/shaders/: decimate.wgsl  normals.wgsl
crates/vcad-kernel-math/src/: lib.rs
crates/vcad-kernel-nurbs/: Cargo.toml
crates/vcad-kernel-nurbs/src/: lib.rs
crates/vcad-kernel-physics/: Cargo.toml
crates/vcad-kernel-physics/src/: colliders.rs  error.rs  gym.rs  joints.rs  lib.rs  world.rs
crates/vcad-kernel-primitives/src/: lib.rs
crates/vcad-kernel-raytrace/: Cargo.toml
crates/vcad-kernel-raytrace/src/: bvh.rs  lib.rs  ray.rs  trim.rs
crates/vcad-kernel-raytrace/src/gpu/: buffers.rs  mod.rs  pipeline.rs
crates/vcad-kernel-raytrace/src/gpu/shaders/: mod.rs  raytrace.wgsl
crates/vcad-kernel-raytrace/src/intersect/: bilinear.rs  bspline.rs  cone.rs  cylinder.rs  mod.rs  plane.rs  sphere.rs  torus.rs
crates/vcad-kernel-sketch/: Cargo.toml
crates/vcad-kernel-sketch/src/: extrude.rs  lib.rs  profile.rs  revolve.rs
crates/vcad-kernel-step/: Cargo.toml
crates/vcad-kernel-step/src/: error.rs  lexer.rs  lib.rs  parser.rs  reader.rs  writer.rs
crates/vcad-kernel-step/src/entities/: curves.rs  geometry.rs  mod.rs  surfaces.rs  topology.rs
crates/vcad-kernel-stocksim/: Cargo.toml
crates/vcad-kernel-stocksim/src/: collision.rs  lib.rs  marching_cubes.rs  octree.rs  subtract.rs
crates/vcad-kernel-sweep/src/: frenet.rs  loft.rs  sweep.rs
crates/vcad-kernel-tessellate/src/: lib.rs
crates/vcad-kernel-wasm/: Cargo.toml
crates/vcad-kernel-wasm/src/: lib.rs
crates/vcad-kernel/src/: lib.rs
crates/vcad-slicer/: Cargo.toml
crates/vcad-slicer-bambu/: Cargo.toml
crates/vcad-slicer-bambu/src/: commands.rs  discovery.rs  error.rs  lib.rs  mqtt.rs  status.rs  threemf.rs
crates/vcad-slicer-gcode/: Cargo.toml
crates/vcad-slicer-gcode/src/: flavor.rs  gcode.rs  lib.rs  printer.rs
crates/vcad-slicer-wasm/: Cargo.toml
crates/vcad-slicer-wasm/src/: lib.rs
crates/vcad-slicer/src/: error.rs  infill.rs  lib.rs  path.rs  perimeter.rs  slice.rs  support.rs
crates/vcad/examples/: bracket.rs  generate_renders.rs  mascot.rs  plate.rs
crates/vcad/src/: lib.rs  step.rs
crates/vcad/src/export/: dxf.rs  gltf.rs  materials.rs  mod.rs  usd.rs
crates/wasmosis/: Cargo.toml
crates/wasmosis/src/: lib.rs
crates/wasmosis/wasmosis-macro/: Cargo.toml
crates/wasmosis/wasmosis-macro/src/: lib.rs
docs/features/: compact-ir.md  index.md  physics-simulation.md  sign-up-delight.md  technical-debt.md  text-engraving.md  text-to-cad.md  urdf-support.md
examples/: bracket.rs  mascot.rs  plate.rs
scripts/: sync-version.mjs
src/: lib.rs
src/export/: gltf.rs  materials.rs  mod.rs  usd.rs
supabase/: config.toml
supabase/migrations/: 001_documents.sql  002_versions.sql  003_inference_logs.sql
web/: CNAME  index.html
