[workspace]
resolver = "2"
members = ["crates/vcad-ir", "crates/vcad"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ecto/vcad"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
nalgebra = "0.33"
manifold-rs = "0.6"
anyhow = "1"
toml = "0.8"
gltf = { version = "1.4" }
base64 = { version = "0.22" }
opencascade = { version = "0.2" }
vcad-ir = { path = "crates/vcad-ir" }
