[workspace]
resolver = "2"
members = [
    "crates/vcad-ir",
    "crates/vcad",
    "crates/vcad-kernel-math",
    "crates/vcad-kernel-topo",
    "crates/vcad-kernel-geom",
    "crates/vcad-kernel-primitives",
    "crates/vcad-kernel-tessellate",
    "crates/vcad-kernel-booleans",
    "crates/vcad-kernel-nurbs",
    "crates/vcad-kernel-fillet",
    "crates/vcad-kernel-sketch",
    "crates/vcad-kernel-sweep",
    "crates/vcad-kernel-shell",
    "crates/vcad-kernel-step",
    "crates/vcad-kernel",
    "crates/vcad-kernel-constraints",
    "crates/vcad-kernel-wasm",
    "crates/vcad-kernel-drafting",
    "crates/vcad-cli",
    "crates/vcad-kernel-gpu",
    "crates/vcad-kernel-raytrace",
    "crates/vcad-kernel-urdf",
    "crates/vcad-kernel-physics",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ecto/vcad"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
nalgebra = "0.33"
slotmap = "1"
anyhow = "1"
toml = "0.8"
gltf = { version = "1.4" }
base64 = { version = "0.22" }
opencascade = { version = "0.2" }
vcad-ir = { path = "crates/vcad-ir" }
vcad-kernel = { path = "crates/vcad-kernel" }
vcad-kernel-math = { path = "crates/vcad-kernel-math" }
vcad-kernel-topo = { path = "crates/vcad-kernel-topo" }
vcad-kernel-geom = { path = "crates/vcad-kernel-geom" }
vcad-kernel-primitives = { path = "crates/vcad-kernel-primitives" }
vcad-kernel-tessellate = { path = "crates/vcad-kernel-tessellate" }
vcad-kernel-booleans = { path = "crates/vcad-kernel-booleans" }
vcad-kernel-nurbs = { path = "crates/vcad-kernel-nurbs" }
vcad-kernel-fillet = { path = "crates/vcad-kernel-fillet" }
vcad-kernel-sketch = { path = "crates/vcad-kernel-sketch" }
vcad-kernel-sweep = { path = "crates/vcad-kernel-sweep" }
vcad-kernel-shell = { path = "crates/vcad-kernel-shell" }
vcad-kernel-step = { path = "crates/vcad-kernel-step" }
vcad-kernel-constraints = { path = "crates/vcad-kernel-constraints" }
vcad-kernel-drafting = { path = "crates/vcad-kernel-drafting" }
vcad-kernel-gpu = { path = "crates/vcad-kernel-gpu" }
vcad-kernel-raytrace = { path = "crates/vcad-kernel-raytrace" }
vcad-kernel-urdf = { path = "crates/vcad-kernel-urdf" }
vcad-kernel-physics = { path = "crates/vcad-kernel-physics" }
