[package]
name = "vcad-kernel-fillet"
description = "Fillet and chamfer operations for the vcad kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vcad-kernel-math = { path = "../vcad-kernel-math" }
vcad-kernel-topo = { path = "../vcad-kernel-topo" }
vcad-kernel-geom = { path = "../vcad-kernel-geom" }
vcad-kernel-primitives = { path = "../vcad-kernel-primitives" }

[dev-dependencies]
vcad-kernel-tessellate = { path = "../vcad-kernel-tessellate" }
