[package]
name = "vcad-kernel-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GPU-accelerated geometry operations for vcad"

[dependencies]
wgpu = { version = "23", features = ["webgpu", "webgl"] }
bytemuck = { version = "1.14", features = ["derive"] }
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
