[package]
name = "vcad-kernel-nurbs"
description = "B-spline and NURBS evaluation for the vcad kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vcad-kernel-math = { path = "../vcad-kernel-math" }
vcad-kernel-geom = { path = "../vcad-kernel-geom" }
