[package]
name = "vcad-kernel-wasm"
description = "WASM bindings for the vcad B-rep kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vcad-kernel = { workspace = true }
vcad-kernel-drafting = { workspace = true }
vcad-kernel-tessellate = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { workspace = true }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true
