[package]
name = "vcad-kernel"
description = "High-level B-rep CAD kernel facade for vcad"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vcad-kernel-math = { path = "../vcad-kernel-math" }
vcad-kernel-topo = { path = "../vcad-kernel-topo" }
vcad-kernel-geom = { path = "../vcad-kernel-geom" }
vcad-kernel-primitives = { path = "../vcad-kernel-primitives" }
vcad-kernel-tessellate = { path = "../vcad-kernel-tessellate" }
vcad-kernel-booleans = { path = "../vcad-kernel-booleans" }
vcad-kernel-fillet = { path = "../vcad-kernel-fillet" }
vcad-kernel-sketch = { path = "../vcad-kernel-sketch" }
vcad-kernel-shell = { path = "../vcad-kernel-shell" }
vcad-kernel-step = { path = "../vcad-kernel-step" }
vcad-kernel-constraints = { path = "../vcad-kernel-constraints" }
