[package]
name = "vcad-slicer-gcode"
description = "G-code generation for the vcad slicer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vcad-slicer = { path = "../vcad-slicer" }
vcad-kernel-math = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx = "0.5"
