[package]
name = "vcad-slicer-wasm"
description = "WASM bindings for the vcad slicer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vcad-slicer = { path = "../vcad-slicer" }
vcad-slicer-gcode = { path = "../vcad-slicer-gcode" }
vcad-kernel-tessellate = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]
