[package]
name = "vcad"
description = "Parametric CAD in Rust — CSG modeling with multi-format export"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["cad", "csg", "stl", "gltf", "parametric"]
categories = ["rendering::data-formats", "science"]
exclude = ["../../web/", "../../assets/"]

[features]
default = ["gltf"]
step = ["opencascade"]
gltf = ["dep:gltf", "dep:base64"]
usd = []

[dependencies]
vcad-ir = { workspace = true }
manifold-rs = { workspace = true }
nalgebra = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
gltf = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
opencascade = { workspace = true, optional = true }
