[package]
name = "vcad"
description = "Parametric CAD in Rust — CSG modeling with multi-format export"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["cad", "csg", "stl", "gltf", "parametric"]
categories = ["rendering::data-formats", "science"]
exclude = ["../../web/", "../../assets/"]

[features]
default = ["gltf"]
step = []
gltf = ["dep:gltf", "dep:base64"]
usd = []
drafting = ["dep:vcad-kernel-drafting"]

[dependencies]
vcad-ir = { workspace = true }
vcad-kernel = { workspace = true }
vcad-kernel-drafting = { workspace = true, optional = true }
nalgebra = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
gltf = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
