[package]
name = "wasmosis-macro"
description = "Proc-macro for wasmosis lazy WASM module splitting"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
